--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,11 +36,15 @@
 [[constraint]]
   branch = "master"
   name = "github.com/mjibson/goon"
-
 [[constraint]]
   name = "google.golang.org/appengine"
   version = "~1.3"
-
+[[constraint]]
+  name = "gopkg.in/go-playground/validator.v9"
+  version = "~9.24"
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "~1.2"
 [prune]
   go-tests = true
   unused-packages = true
